still trying to fix the photo overlap in teh about section. I also updated the THI Graphic

--- a/css/styles.css
+++ b/css/styles.css
@@ -761,8 +761,8 @@ h3 {
 }
 
 .thiPromo {
-    height: 100%;
-    width: 100%;
+    height: 50vw;
+    width: 65vw;
     background-image: url(../img/thiGraphic.jpeg);
     background-size: cover;
 }
@@ -902,7 +902,7 @@ h3 {
         align-items: center;
     }
     .thiPromo {
-        min-height: 80vw;
-        min-width: 100vw;
+        min-height: 50vw;
+        min-width: 65vw;
     }
 }
